Update with url

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Georgi Kostov's Portfolio
+title: Welcome to Georgi Kostov's Portfolio
 ---
 
 <h1>Welcome to Georgi Kostov's Portfolio</h1>
